hphp/hack/test/typecheck/inout/bad_inout_decl_generator.php
<?hh

function test(inout string $s): Iterator<int> {
  yield 42;
}
